Fix "Google" logo image overlap issue Add CSS to ensure BG of business card is white

--- a/src/style.scss
+++ b/src/style.scss
@@ -16,6 +16,7 @@
     border-radius: $border-radius;
     box-shadow: rgba(50, 50, 93, 0.25) 0 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     line-height: 1.6;
+    background: #FFF;
 
     a {
         text-decoration: none;
